--- a/src/shelllocal.html
+++ b/src/shelllocal.html
@@ -75,7 +75,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        height: 100%;
+        height: 80%;
     }
     /* The Canvas */
     canvas.emscripten {
@@ -88,7 +88,32 @@
         background-color: black;
         outline: none;
         max-width: 100svw;
-        max-height: 100svh;
+        max-height: 80svh;
+        -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    }
+    /* The Console holder */
+    div.consoleHolder {
+        border: 0px;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 20%;
+    }
+    /* The Console */
+    console.emscripten {
+        padding-right: 0;
+        margin-left: 0;
+        margin-right: 0;
+        display: block;
+        display: table-cell;
+        vertical-align: top;
+        align: left;
+        background-color: white;
+        outline: none;
+        max-width: 100svw;
+        max-height: 20svh;
         -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
     }
   </style>
@@ -104,18 +129,28 @@
     <canvas id="canvas" class="emscripten" oncontextmenu="event.preventDefault()" tabindex="-1"></canvas>
   </div>
 
+  <div id="consoleHolder" class="consoleHolder">
+    <textarea id="console" cols="100" rows="10" class="emscripten">Console</pre>
+  </div>
+
   <!-- Code for Emscripten Base -->
   <script type='text/javascript'>
     var Module = {
       preRun: [],
       postRun: [],
       print: (function(text) {
-          if(typeof text !== 'undefined')
-              window.alert(text);
+          var element = document.getElementById('console');
+          return function(text) {
+            element.textContent += text + "\n";
+            element.scrollTop = element.scrollHeight;
+          };
       })(),
       printErr: (function(text) {
-          if(typeof text !== 'undefined')
-              window.alert(text);
+          var element = document.getElementById('console');
+          return function(text) {
+            element.textContent += text + "\n";
+            element.scrollTop = element.scrollHeight;
+          };
       })(),
       canvas: (function() {
         var canvas = document.getElementById('canvas');
