--- a/src/shelllocal.html
+++ b/src/shelllocal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Playfield Engine</title>
+  <title>Playfield</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1, initial-scale=1">
   <style>
     html, body {
@@ -167,7 +167,7 @@
     };
   </script>
 
-  <!-- Code for Playfield Engine Editor -->
+  <!-- Code for Playfield Editor -->
   <script type="text/javascript">
     // File System API
     var dirHandle = null;
